Add functional tests task

--- a/build.gradle
+++ b/build.gradle
@@ -42,17 +42,19 @@ task functionalTest(type: Test) {
 	testClassesDirs = sourceSets.functionalTest.output.classesDirs
 	classpath = sourceSets.functionalTest.runtimeClasspath
 	outputs.upToDateWhen {false}
-	logger.info("Waiting for application to start")
-	def healthUrl = "http://localhost:8080/actuator/health"
-	ant.waitfor(maxwait: "30", maxwaitunit: "second", checkevery: "500") {
-		http(url: healthUrl)
+	doFirst {
+		logger.info("Waiting for application to start")
+		def healthUrl = "http://localhost:8080/actuator/health"
+		ant.waitfor(maxwait: "30", maxwaitunit: "second", checkevery: "500") {
+			http(url: healthUrl)
+		}
+		def code = new URL(healthUrl).openConnection().with {
+			requestMethod = 'HEAD'
+			connect()
+			responseCode
+		}
+		assert code == 200
 	}
-	def code = new URL(healthUrl).openConnection().with {
-		requestMethod = 'HEAD'
-		connect()
-		responseCode
-	}
-	assert code == 200
 }
 
 repositories {
