--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.1.2'
 	id 'org.hidetake.swagger.generator' version '2.18.2'
+	id "org.unbroken-dome.test-sets" version "3.0.1"
 	id "org.sonarqube" version "2.8"
 }
 
@@ -25,25 +26,17 @@ configurations {
 	swagerUiBundle {
 		transitive = false
 	}
-	functionalTestCompile.extendsFrom testCompile
-	functionalTestRuntime.extendsFrom testRuntime
 }
 
-sourceSets {
-	functionalTest {
-		groovy {
-			compileClasspath += main.output + test.output
-			runtimeClasspath += main.output + test.output
-		}
+testSets {
+	testEnd2End {
+		dirName = 'test-e2e'
 	}
 }
 
-task functionalTest(type: Test) {
-	testClassesDirs = sourceSets.functionalTest.output.classesDirs
-	classpath = sourceSets.functionalTest.runtimeClasspath
-	outputs.upToDateWhen {false}
+tasks.testEnd2End {
 	doFirst {
-		logger.info("Waiting for application to start")
+		logger.info("Waiting for application")
 		def healthUrl = "http://localhost:8080/actuator/health"
 		ant.waitfor(maxwait: "30", maxwaitunit: "second", checkevery: "500") {
 			http(url: healthUrl)
