--- a/build.gradle
+++ b/build.gradle
@@ -84,7 +84,7 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'com.maxmind.geoip2:geoip2:2.13.1'
 
-	// Testing
+	// Testing unit & integration
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 	testImplementation 'org.spockframework:spock-spring:1.3-groovy-2.5'
@@ -96,6 +96,9 @@ dependencies {
 	testImplementation 'org.reflections:reflections:0.9.12'
 	testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.13'
 	testImplementation 'org.projectlombok:lombok'
+
+	// Testing E2E
+	testEnd2EndImplementation 'io.rest-assured:rest-assured'
 
 	// Dev tools
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
