--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -57,7 +57,7 @@ jobs:
       with:
         files: ${{env.TEST_SUMMARY}}
 
-    - name: Export test summary
+    - name: Publish test summary
       if: steps.check_test_summary.outputs.files_exists == 'true'
       uses: actions/upload-artifact@v2
       with:
