--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.1.2'
 	id 'org.hidetake.swagger.generator' version '2.18.2'
+	id "org.unbroken-dome.test-sets" version "3.0.1"
 	id "org.sonarqube" version "2.8"
 }
 
@@ -24,6 +25,26 @@ configurations {
 	}
 	swagerUiBundle {
 		transitive = false
+	}
+}
+
+testSets {
+	testE2E
+}
+
+tasks.testE2E {
+	doFirst {
+		logger.info("Waiting for service")
+		def healthUrl = "http://localhost:8080/actuator/health"
+		ant.waitfor(maxwait: "60", maxwaitunit: "second", checkevery: "500") {
+			http(url: healthUrl)
+		}
+		def code = new URL(healthUrl).openConnection().with {
+			requestMethod = 'HEAD'
+			connect()
+			responseCode
+		}
+		assert code == 200
 	}
 }
 
@@ -61,7 +82,7 @@ dependencies {
 	implementation 'org.liquibase:liquibase-core'
 	implementation 'com.maxmind.geoip2:geoip2:2.13.1'
 
-	// Testing
+	// Testing unit & integration
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 	testImplementation 'org.spockframework:spock-spring:1.3-groovy-2.5'
@@ -73,6 +94,9 @@ dependencies {
 	testImplementation 'org.reflections:reflections:0.9.12'
 	testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.13'
 	testImplementation 'org.projectlombok:lombok'
+
+	// Testing E2E
+	testE2EImplementation 'io.rest-assured:rest-assured'
 
 	// Dev tools
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
