--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'java'
 	id 'groovy'
 	id 'jacoco'
+	id "com.palantir.git-version" version "0.12.3"
 	id 'org.springframework.boot' version '2.2.5.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'io.swagger.core.v3.swagger-gradle-plugin' version '2.1.2'
@@ -10,8 +11,15 @@ plugins {
 	id "org.sonarqube" version "2.8"
 }
 
+def gitSemVer() {
+	def git = versionDetails()
+	def commitCount = git.commitDistance > 0 ? "+" + git.commitDistance : ""
+	def dirtyFlag = git.isCleanTag ? "" : ".dirty"
+	return git.lastTag + commitCount + dirtyFlag
+}
+
 group = 'com.github.mwierzchowski.helios'
-version = System.getenv('VERSION') ?: 'SNAPSHOT'
+version = gitSemVer()
 sourceCompatibility = '1.13'
 targetCompatibility = '1.13'
 
