--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -30,7 +30,7 @@ jobs:
 #      run: echo "::set-env name=VERSION::{"
       run: echo "git version is ${GIT_VERSION}"
       env:
-        GIT_VERSION: $(./gradlew properties -q | grep "version:" | awk '{print $2}')
+        GIT_VERSION: "$(./gradlew properties -q | grep 'version:' | awk '{print $2}')"
 
     - name: Assemble application
       run: ./gradlew assemble
