--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -28,9 +28,7 @@ jobs:
 
     - name: Set up version
 #      run: echo "::set-env name=VERSION::{"
-      run: echo "git version is ${GIT_VERSION}"
-      env:
-        GIT_VERSION: $(./gradlew properties -q | grep 'version:' | awk '{print $2}')
+      run: echo "git version is $(./gradlew properties -q | grep 'version:' | awk '{print $2}')"
 
     - name: Assemble application
       run: ./gradlew assemble
