--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -27,7 +27,7 @@ jobs:
           ${{runner.os}}-gradle-
 
     - name: Set up version
-      run: ./gradlew properties -q | grep '^version:'
+      run: ./gradlew properties -q | grep 'version'
 #      run: echo "::set-env name=VERSION::{"
 #      run: echo "git version is $(./gradlew properties -q | grep '^version:' | awk '{print $2}')"
 
