--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -9,6 +9,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+      run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
     - name: Set up JDK 13
       uses: actions/setup-java@v1
