--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -7,7 +7,10 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Checkout tags
       run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
 
     - name: Set up JDK 13
