--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -11,7 +11,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Checkout tags
-      run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
+      run: git fetch --prune --unshallow
 
     - name: Set up JDK 13
       uses: actions/setup-java@v1
@@ -30,7 +30,7 @@ jobs:
           ${{runner.os}}-gradle-
 
     - name: Git describe
-      run: git describe --tags
+      run: git describe --tags --always
 
     - name: Set up version
       run: ./gradlew properties -q | grep 'version'
