--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ plugins {
 	id "org.sonarqube" version "2.8"
 }
 
-def gitSemVer() {
+static def gitSemVer() {
 	def git = versionDetails()
 	def commitCount = git.commitDistance > 0 ? "+" + git.commitDistance : ""
 	def dirtyFlag = git.isCleanTag ? "" : ".dirty"
