--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -1,15 +1,17 @@
 name: CI
 on: push
 env:
-  VERSION: ${{github.run_number}}
   TEST_SUMMARY: /home/runner/work/helios/helios/build/reports/tests/test
 
 jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v2
+
+    - name: Checkout tags
+      run: git fetch --prune --unshallow
 
     - name: Set up JDK 13
       uses: actions/setup-java@v1
@@ -27,11 +29,11 @@ jobs:
         restore-keys: |
           ${{runner.os}}-gradle-
 
+    - name: Set up Semantic Versioning
+      run: echo "::set-env name=VERSION::$(git describe --tags --always --first-parent --dirty)"
+
     - name: Assemble application
       run: ./gradlew assemble
-
-    - name: Test application
-      run: ./gradlew test jacocoTestReport
 
     - name: Assemble image
       run: docker build -t helios:latest -t helios:$VERSION .
