Bring back removed tests

--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -35,6 +35,9 @@ jobs:
     - name: Assemble application
       run: ./gradlew assemble
 
+    - name: Test application
+      run: ./gradlew test jacocoTestReport
+
     - name: Assemble image
       run: docker build -t helios:latest -t helios:$VERSION .
 
