--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,6 +3,10 @@ info.app:
   name: Helios
   description: Sun blinds controller
 
+# Jersey
+spring.jersey:
+    application-path: /api
+
 # Actuator
 management:
   endpoints.web.exposure.include: '*'
@@ -21,6 +25,7 @@ spring:
     password: 'helios'
   jpa.database-platform: org.hibernate.dialect.PostgreSQLDialect
   liquibase.change-log: classpath:liquibase-changelog.sql
+
 decorator.datasource.p6spy:
   enable-logging: false
   log-format: '(connection %(connectionId) - %(category)) %(sql)'
