--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -33,13 +33,13 @@ jobs:
       run: echo "::set-env name=VERSION::$(git describe --tags --always --first-parent --dirty)"
 
     - name: Assemble application
-      run: ./gradlew assemble
+      run: ./gradlew assemble -PbuildInfoEnabled
 
     - name: Test application
-      run: ./gradlew test jacocoTestReport -x bootBuildInfo -x addSwaggerUi
+      run: ./gradlew test jacocoTestReport
 
     - name: Assemble image
-      run: docker build -t helios:latest -t helios:$VERSION .
+      run: docker build -t helios-app -t helios-app:$VERSION .
 
     - name: Deploy test environment
       env:
@@ -51,13 +51,13 @@ jobs:
       run: docker-compose up -d
 
     - name: Test E2E
-      run: ./gradlew testE2E -x bootBuildInfo -x addSwaggerUi
+      run: ./gradlew testE2E
 
     - name: Quality scan
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
-      run: ./gradlew sonarqube -x bootBuildInfo -x addSwaggerUi -Dsonar.branch.name=$GITHUB_REF_NAME
+      run: ./gradlew sonarqube -Dsonar.branch.name=$GITHUB_REF_NAME
 
     - name: Check if test summary is available
       id: check_test_summary
