--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'de.codecentric:spring-boot-admin-starter-client:2.2.3'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.6.1'
 	implementation 'org.mapstruct:mapstruct:1.3.1.Final'
 	implementation 'io.swagger.core.v3:swagger-jaxrs2:2.1.2'
