--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -2,6 +2,7 @@ name: CI
 on: push
 env:
   TEST_SUMMARY: /home/runner/work/helios/helios/build/reports/tests/test
+  TEST_SUMMARY_E2E: /home/runner/work/helios/helios/build/reports/tests/testE2E
 
 jobs:
   Build:
@@ -72,3 +73,18 @@ jobs:
       with:
         name: Test Summary
         path: ${{env.TEST_SUMMARY}}
+
+
+    - name: Check if E2E test summary is available
+      id: check_e2e_test_summary
+      if: always()
+      uses: andstor/file-existence-action@v1
+      with:
+        files: ${{env.TEST_SUMMARY_E2E}}
+
+    - name: Publish E2E test summary
+      if: steps.check_e2e_test_summary.outputs.files_exists == 'true'
+      uses: actions/upload-artifact@v2
+      with:
+        name: E2E Test Summary
+        path: ${{env.TEST_SUMMARY_E2E}}
