--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -104,11 +104,11 @@ jobs:
         name: Test Summary
         path: /home/runner/work/helios/helios/build/reports/tests/test
 
-  Publish:
-    runs-on: ubuntu-latest
-    needs:
-      - Build
-      - Test
-    steps:
-      - name: Test
-        run: echo "I am working"
+#  Publish:
+#    runs-on: ubuntu-latest
+#    needs:
+#      - Build
+#      - Test
+#    steps:
+#      - name: Test
+#        run: echo "I am working "
