--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
 
   backend:
-    image: 'docker.pkg.github.com/mwierzchowski/helios/helios-app:${VERSION:-latest}'
+    image: helios-app:${VERSION:-latest}
     ports:
       - 8080:8080
     depends_on:
