Add conditional push to packages

--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -59,6 +59,7 @@ jobs:
         path: /home/runner/work/helios/helios/build/reports/tests/testE2E
 
     - name: Publish image
+      if: github.ref == 'refs/heads/master'
       run: |
         docker login docker.pkg.github.com --username mwierzchowski --password ${{secrets.GITHUB_TOKEN}}
         docker tag helios-app:$VERSION $PKG_NAME:$VERSION
