--- a/.github/workflows/continous-integration.yaml
+++ b/.github/workflows/continous-integration.yaml
@@ -37,7 +37,7 @@ jobs:
       run: ./gradlew assemble -PbuildInfoEnabled
 
     - name: Assemble image
-      run: docker build -t helios-app:$VERSION .
+      run: docker build -t $PKG_NAME -t $PKG_NAME:$VERSION .
 
     - name: Deploy test environment
       env:
@@ -51,19 +51,18 @@ jobs:
     - name: Test E2E
       run: ./gradlew testE2E
 
-    - name: Publish E2E test summary
+    - name: Publish test E2E summary
       if: always()
       uses: actions/upload-artifact@v2
       with:
-        name: E2E Test Summary
-        path: /home/runner/work/helios/helios/build/reports/tests/testE2E
+        name: Test E2E Summary
+        path: ~/work/helios/helios/build/reports/tests/testE2E
 
     - name: Publish image
-      if: github.ref == 'refs/heads/master'
+      if: github.event_name == 'release' && github.event.action == 'created'
       run: |
         docker login docker.pkg.github.com --username mwierzchowski --password ${{secrets.GITHUB_TOKEN}}
-        docker tag helios-app:$VERSION $PKG_NAME:$VERSION
-        docker push $PKG_NAME:$VERSION
+        docker push $PKG_NAME $PKG_NAME:$VERSION
 
   Test:
     runs-on: ubuntu-latest
@@ -104,13 +103,13 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: Test Summary
-        path: /home/runner/work/helios/helios/build/reports/tests/test
+        path: ~/work/helios/helios/build/reports/tests/test
 
-#  Publish:
-#    runs-on: ubuntu-latest
-#    needs:
-#      - Build
-#      - Test
-#    steps:
-#      - name: Test
-#        run: echo "I am working "
+  Deploy:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'release' && github.event.action == 'created'
+    needs:
+      - Build
+      - Test
+    steps:
+      - run: echo "This is just a placeholder for future deployment job"
