--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -59,7 +59,7 @@ jobs:
         path: ~/work/helios/helios/build/reports/tests/testE2E
 
     - name: Publish image
-      if: github.event_name == 'release' && github.event.action == 'created'
+      if: github.event_name == 'release' && github.event.action == 'published'
       run: |
         echo $GITHUB_TOKEN | docker login docker.pkg.github.com --username mwierzchowski --password-stdin
         docker push $PKG_NAME:latest
@@ -110,7 +110,7 @@ jobs:
 
   Deploy:
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'created'
+    if: github.event_name == 'release' && github.event.action == 'published'
     needs:
       - Build
       - Test
