Feature/publish images to docker registry (#52)
Cleanup pipeline and publish images to registry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
 
   backend:
-    image: 'helios-app:${VERSION:-latest}'
+    image: docker.pkg.github.com/mwierzchowski/helios/helios-app:${VERSION:-latest}
     ports:
       - 8080:8080
     depends_on:
