--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,9 +1,8 @@
-name: CI
+name: CI/CD
 on: push
 env:
   VERSION_EXP: git describe --tags --always --first-parent --dirty
-  TEST_SUMMARY_DIR: /home/runner/work/helios/helios/build/reports/tests/test
-  TEST_E2E_SUMMARY_DIR: /home/runner/work/helios/helios/build/reports/tests/testE2E
+  PKG_NAME: docker.pkg.github.com/mwierzchowski/helios/helios-app
 
 jobs:
   Build:
@@ -31,40 +30,42 @@ jobs:
         restore-keys: |
           ${{runner.os}}-gradle-
 
-    - name: Set up Semantic Versioning
+    - name: Set up version
       run: echo "::set-env name=VERSION::$($VERSION_EXP)"
 
     - name: Assemble application
       run: ./gradlew assemble -PbuildInfoEnabled
 
     - name: Assemble image
-      run: docker build -t helios-app -t helios-app:$VERSION .
+      run: docker build -t $PKG_NAME:$VERSION -t $PKG_NAME:latest .
 
     - name: Deploy test environment
       env:
-        OWM_API_KEY: ${{secrets.OWM_API_KEY}}
         MAIL_HOST: smtp.gmail.com
         MAIL_USER: ${{secrets.TEST_MAIL_USER}}
         MAIL_PASSWORD: ${{secrets.TEST_MAIL_PASS}}
         MAIL_RECIPIENT: ${{secrets.TEST_MAIL_USER}}@gmail.com
+        OWM_API_KEY: ${{secrets.OWM_API_KEY}}
       run: docker-compose up -d
 
     - name: Test E2E
       run: ./gradlew testE2E
 
-    - name: Check if E2E test summary is available
-      id: check_e2e_test_summary
+    - name: Publish test E2E summary
       if: always()
-      uses: andstor/file-existence-action@v1
-      with:
-        files: ${{env.TEST_E2E_SUMMARY_DIR}}
-
-    - name: Publish E2E test summary
-      if: steps.check_e2e_test_summary.outputs.files_exists == 'true'
       uses: actions/upload-artifact@v2
       with:
-        name: E2E Test Summary
-        path: ${{env.TEST_E2E_SUMMARY_DIR}}
+        name: Test E2E Summary
+        path: ~/work/helios/helios/build/reports/tests/testE2E
+
+    - name: Publish image
+      if: startsWith(github.ref, 'refs/tags/')
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      run: |
+        echo $GITHUB_TOKEN | docker login docker.pkg.github.com --username mwierzchowski --password-stdin
+        docker push $PKG_NAME:latest
+        docker push $PKG_NAME:$VERSION
 
   Test:
     runs-on: ubuntu-latest
@@ -91,7 +92,7 @@ jobs:
         restore-keys: |
           ${{runner.os}}-gradle-
 
-    - name: Set up Semantic Versioning
+    - name: Set up version
       run: echo "::set-env name=VERSION::$($VERSION_EXP)"
 
     - name: Test application
@@ -100,16 +101,18 @@ jobs:
         SONAR_TOKEN: ${{secrets.SONAR_TOKEN}}
       run: ./gradlew test jacocoTestReport sonarqube -Dsonar.branch.name=$GITHUB_REF_NAME
 
-    - name: Check if test summary is available
-      id: check_test_summary
-      if: always()
-      uses: andstor/file-existence-action@v1
-      with:
-        files: ${{env.TEST_SUMMARY_DIR}}
-
     - name: Publish test summary
-      if: steps.check_test_summary.outputs.files_exists == 'true'
+      if: always()
       uses: actions/upload-artifact@v2
       with:
         name: Test Summary
-        path: ${{env.TEST_SUMMARY_DIR}}
+        path: ~/work/helios/helios/build/reports/tests/test
+
+  Deploy:
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/')
+    needs:
+      - Build
+      - Test
+    steps:
+      - run: echo "This is just a placeholder for future deployment job"
